--- a/LoginMicroservice/appsettings.json
+++ b/LoginMicroservice/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Facebook": {
     "AppId": "1079338452912062",
-    "AppSecret": "5a7c8fc35b300adbd53559b4fe6c7297"
+    "AppSecret": "5a7c8fc35b300adbd53559b4fe6c7297",
+    "RedirectUri": "https://localhost:7286/Home/FacebookRedirect"
   }
 }
